minor editing changes

--- a/paper/ozone_jgcri.tex
+++ b/paper/ozone_jgcri.tex
@@ -82,7 +82,10 @@ The data was intended to be at the 2 degree x 2.5 degree grid but the calculatio
 
 
 \section{Methods}
-
+Where to get the ozone data?
+We could use the CMIP5 data.
+But its not clear if we should only use the models with interactive chemistry, or include all of them (i.e., those with time-varying ozone) \parencite{eyring2013long}.
+In CMIP3 stratospheric ozone projections were not time-varying. 
 
 \printbibliography
 \end{document}
