Rewriting the introduction section to reflect the literature

--- a/paper/ozone_jgcri.tex
+++ b/paper/ozone_jgcri.tex
@@ -20,37 +20,26 @@
 
 \section{Abstract}
 
-\section{Literature review}
+\section{Introduction}
 Ozone ($O_{3}$) negatively effects plant growth and physiology, and subsequently, yields, as it causes injury, reduces photosynthesis, and, decreases plant productivity \parencite{mishra:2013aa}. 
+Two main approaches exist in the literature to quantify the impact of ozone on crops: concentration based critical levels (i.e., AOT40, W126, etc.), which capture the relationship between the cumulative dose over a threshold on the outcome variable, and flux models, which model the flux of ozone through the stomatal pores, also to identify critical levels of ozone \parencite{mills:2007aa}.\footnote{A third, less used model but mentioned here for completeness, is the maximum permissible ozone concentration (MPOC)\parencite{mills:2007aa}.}
+Observational evidence seems to support the idea that flux-based assessments do a better job of predicting ozone impacts, as compared to measures like AOT40 and W126 \parencite{avnery:2013ab}.
+However, (atleast as of 2013) the flux-based models are not yet suitable for global impact analysis \parencite{avnery:2013ab}. \footnote{The authors applied the AOT40 and W126 relationships developed for the US and Europe globally.} 
 
-There are two main approaches used to quantify the impact of ozone on crops: concentration based critical levels ($CLe_{c}$) (i.e., AOT40), which capture the relationship between the cumulative dose over a threshold on the outcome variable, and flux models, which model the flux of ozone through the stomatal pores to identify critical levels of ozone \parencite{mills:2007aa}. 
-A third, less used model, is the maximum permissible ozone concentration (MPOC)\parencite{mills:2007aa}.  
-Evidence in Europe seems to support the idea that flux-based assessments do a better job than AOT40 exposure in predicting ozone impacts \parencite{avnery:2013ab}.\footnote{As of 2013, the flux-based models were not suitable for global impact analysis \parencite{avnery:2013ab}. The authors applied the AOT40 and W126 relationships developed for the US and Europe globally.} 
-
-The critical load and level concept, an effect-based approach to quantify the necessary level of reductions of atmospheric depositions, came about as a result of the Convention on Long-range Transboundary Air Pollution (LRTAP-Convention) \parencite{clrtap:2015aa}. 
-Critical levels are defined as the "ambient concentrations above which damage may occur" \parencite[I-5]{clrtap:2015aa}.
-"Critical loads and levels correspond to a maximum allowable exposure of a receptor to deposition or ambient concentration respectively" \parencite[I-5]{clrtap:2015aa}.
-Note: We could add more information here on the convention, organizations, monitoring, etc. 
-
-The $CLe_{c}$ approach uses the accumulated ozone above a threshold concentration for a certain time-window. 
-As a first step these studies identify the critical level of accumulated ozone above which, damage occurs \parencite{mills:2007aa}.
-One criticism of this type of model is that it does not take into account how much of the ozone actually enters the plant through the stomatal pores.
-Flux modeling addresses this issue derives the flux-based critical levels ($CLe_{f}$) \parencite{mills:2007aa}.  
-
-Four major studies have been undertaken that serve as the basepoint for studies of this type (and their resulting estimates): US National Crop Loss Assessment Network (1980s); the European Open Top Chamber Programme (EOTCP) (late 1980s to early 1990s), open-top chamber (OTC) experiments in Europe, and the Changing Climate and Potential Impact on Potato Yield and Quality (year?) \parencite{mills:2007aa}. 
-
-From the NCLAN and EOTCP data researchers identified a cumulative exposure threshold of 50-87 ppb in the United States and 35-60 ppb in Europe \parencite{mills:2007aa}.
-This work led to the use of the AOT40 measure, which is the lowest levels at which crop damage could be detected, in Europe, as the concentration based indicator of ozone damage to crops.
-
-AOT40 refers to the concentration of ozone accumulated over a threshold concentration of ozone, which us usually 30 or 40 ppb (i.e., AOT30 and AOT40, respectively). 
+The critical load and level concept, an effect-based approach to quantify the necessary level of reductions of atmospheric depositions, came about as a result of the Convention on Long-range Transboundary Air Pollution (LRTAP-Convention) \parencite{clrtap:2015aa}, whereby the critical levels are defined as the levels above which damage occurs \parencite{clrtap:2015aa}. 
+The approach uses the accumulated ozone above a threshold concentration (AOTX) for a certain time-window. 
 AOTX is calculated as the sum of the differences between the hourly mean ozone level and \textit{'X'} for all daylight hours over a time-window, in which the hourly mean is greater than \textit{'X'} \parencite{mills:2007aa}.
-The units of AOTX are parts per billion per hour.\footnote{The mapping manual 'LRTAP Convention (2004)' has detailed description of how to calculate the AOTX.}
-One criticism of the concentration threshold approach is that it only considers the ozone levels at the top of the canopy, which directly led to work on an alternative measure (i.e., flux-based critical levels). 
+One criticism of the concentration threshold approach is that it only considers the ozone levels at the top of the canopy, which directly led to work on an alternative measure (i.e., flux-based critical levels).
+Flux modeling addresses this issue, by deriving the flux-based critical levels ($CLe_{f}$) \parencite{mills:2007aa}.
+
+Four major studies have been undertaken to identify the critical cumulative ozone exposure levels and dose response for agriculture: the US National Crop Loss Assessment Network (NCLAN) (1980s); the European Open Top Chamber Programme (EOTCP) (late 1980s to early 1990s); the open-top chamber (OTC) experiments in Europe; and the Changing Climate and Potential Impact on Potato Yield and Quality (year?) \parencite{mills:2007aa}. 
+From the NCLAN and EOTCP data researchers identified a cumulative exposure threshold of 50-87 ppb in the United States and 35-60 ppb in Europe \parencite{mills:2007aa}.
+This work led to the use of the AOT40 measure, which is the lowest levels at which crop damage could be detected, in Europe, as the concentration based indicator of ozone damage to crops. 
 
 \cite{mills:2007aa} through a metaanlysis of over 700 published papers and proceedings found that crops can be separated into three statistically independent groups: ozone sensitive (i.e., wheat, water melon, pulses, cotton, turnip, tomato, onion, soybean, and lettuce), moderately sensitive (sugar beet, potato, oilseed rape, tobacoo, rice, maize, grape, and broccoli), and ozone resistant (i.e., barley and fruit (e.g. plum and strawberry)) \parencite{mills:2007aa}.  
 Wheat is the most sensitive crop to $O_{3}$ levels \parencite{mills:2007aa}. 
 
-There is a small literature attempting to quantify the impacts of ozone on agricultural production. 
+There is a small literature attempting to quantify the impacts of ozone on agricultural production at the level of global impacts. 
 Changes in ozone can be estimated using either a chemical transport model or using source-receptor relationships established through an adjoint model. 
 The chemical transport model can be computationally expensive given the need to run the model for each representative concentration pathway scenario.
 Whereby the adjoint model can estimate the necessary variables for multiple scenarios during one model run \parencite{lapina:2015aa}.
